deployments/k8s/notificationworker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notificationworker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notificationworker
  template:
    metadata:
      labels:
        app: notificationworker
    spec:
      containers:
        - name: notificationworker
          image: 01092002/go-rabbitmq-notification-worker:latest
