deployments/k8s/notificationapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notificationapi
  namespace: go-rabbitmq-production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notificationapi
  template:
    metadata:
      labels:
        app: notificationapi
    spec:
      containers:
        - name: notificationapi
          image: docker.io/01092002/go-rabbitmq-notification-api:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: notificationapi
spec:
  selector:
    app: notificationapi
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
